solved cube taking too much space on large screens

--- a/static/css/custom-home.css
+++ b/static/css/custom-home.css
@@ -96,74 +96,33 @@
 .back   { transform: rotateY(180deg) translateZ(calc(var(--cube-width) / 2)); }
 .left   { transform: rotateY(-90deg) translateZ(calc(var(--cube-width) / 2)); }
 
-/* replaced with JS onclick() 
-@keyframes rotate {
-    0%, 15% { transform: rotateY(0); }
-    25%, 40% { transform: rotateY(-90deg); }
-    50%, 65% { transform: rotateY(-180deg); }
-    75%, 90% { transform: rotateY(-270deg); }
-    100% { transform: rotateY(-360deg); }
-}
-*/
 
-/* Cube backup 
-.scene {
-  width: 400px;
-  height: 225px;
-  perspective: 600px;
-  margin: 4em auto 4em auto;
-}
+/* Set a max size for cube if screen gets big */
+@media (min-width: 1000px) {
+  .img-cube {
+    width: var(--cube-width-alt);
+    height: calc(var(--cube-width-alt) * 0.5625);
+    perspective: calc(var(--cube-width-alt) * 3 / 2);
+    margin: 4em auto 4em auto;
+  }
 
-.cube {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  transform-style: preserve-3d;
-  animation: rotate 10s ease-in-out infinite;
-}
+  .face {
+    position: absolute;
+    width: var(--cube-width-alt);
+    height: calc(var(--cube-width-alt) * 0.5625);
+    border-radius: 4px;
+    border: 2px solid var(--light);
+    line-height: calc(var(--cube-width-alt) * 0.5625);
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    opacity: var(--cube-opacity);
+  }
 
-.cube__face {
-  position: absolute;
-  width: 400px;
-  height: 225px;
-  border-radius: 4px;
-  border: 2px solid var(--light);
-  line-height: 225px;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  text-align: center;
-  opacity: 0.95;
-}
+.front  { transform: rotateY(  0deg) translateZ(calc(var(--cube-width-alt) / 2)); }
+.right  { transform: rotateY( 90deg) translateZ(calc(var(--cube-width-alt) / 2)); }
+.back   { transform: rotateY(180deg) translateZ(calc(var(--cube-width-alt) / 2)); }
+.left   { transform: rotateY(-90deg) translateZ(calc(var(--cube-width-alt) / 2)); }
 
-.cube__face--front  { 
-  background-image: url("/images/sola-analytics.png");  
-  background-size: contain; 
 }
-.cube__face--right  { 
-  background-image: url("/images/sola-analytics-sign.png");  
-  background-size: contain; 
-}
-.cube__face--back   { 
-  background-image: url("/images/sola-analytics-gradient1.png");  
-  background-size: contain; 
-}
-.cube__face--left   {
-  background-image: url("/images/sola-analytics-forest.png");  
-  background-size: contain; 
-}
-
-.cube__face--front  { transform: rotateY(  0deg) translateZ(200px); }
-.cube__face--right  { transform: rotateY( 90deg) translateZ(200px); }
-.cube__face--back   { transform: rotateY(180deg) translateZ(200px); }
-.cube__face--left   { transform: rotateY(-90deg) translateZ(200px); }
-
-@keyframes rotate {
-    0%, 15% { transform: rotateY(0); }
-    25%, 40% { transform: rotateY(-90deg); }
-    50%, 65% { transform: rotateY(-180deg); }
-    75%, 90% { transform: rotateY(-270deg); }
-    100% { transform: rotateY(-360deg); }
-} 
-*/
-
